--- a/narrative.html
+++ b/narrative.html
@@ -1,14 +1,76 @@
-
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Narrative Projects</title>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Narrative Portfolio – Emir Alhariri</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
+    body {
+      background-color: #111;
+      color: white;
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 20px;
+    }
+    a {
+      color: #00aaff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    h1 {
+      text-align: center;
+      font-size: 32px;
+    }
+    .back-link {
+      margin-bottom: 20px;
+      display: inline-block;
+    }
+    .video {
+      margin-bottom: 40px;
+    }
+    iframe {
+      width: 100%;
+      height: 315px;
+      border: none;
+    }
+    .description {
+      margin-top: 10px;
+      font-size: 0.95em;
+      color: #ccc;
+    }
+  </style>
 </head>
 <body>
-  <h1>Narrative Work</h1>
-  <h2>KELPIE – Norwegian Short Film Horror</h2>
-  <p><strong>Description:</strong> <em>Kelpie</em> is a Norwegian horror short film I co-directed. I also contributed to the camera setup, lighting design, and sound during production.</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/lPBMXGOfdeA" frameborder="0" allowfullscreen></iframe>
-</body>
+<div class="container">
+<a class="back-link" href="index.html">← Back to Home</a>
+<h1>Narrative Work</h1>
+<div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/2n3UkWppLrk"></iframe>
+<p class="description">A fast-paced promotional montage created for a friend’s clothing brand, showcasing style, energy, and visual flair.</p>
+</div>
+<div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/vdfG4Zg7Hww"></iframe>
+<p class="description">A reflective short film exploring the overlooked moments and small details a character fails to appreciate—until they’re gone.</p>
+</div>
+<div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/eswpazPrw6k"></iframe>
+<p class="description">A stylized video illustrating the addictive nature of social media and its impact on attention span—drawing parallels to the fragmented focus of a fish brain in a digital world.</p>
+<div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/eqM_UiJUdAQ"></iframe>
+<p class="description">A visual montage following a lead character through a tapestry of faces and locations, capturing emotion, connection, and movement across space and time.</p>
+</div>
+
+</div>
+<div class="video"><iframe allowfullscreen="True" src="https://www.youtube.com/embed/lPBMXGOfdeA"></iframe><p class="description">Kelpie is a Norwegian horror short film I co-directed. I also contributed to the camera setup, lighting design, and sound during production.</p></div><div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/Zn1w953_mZA"></iframe>
+<p class="description">Shot during my time studying in Norway, this was a fast-paced collaborative project set in a local bar, highlighting our ability to plan and execute under time constraints.</p>
+</div></div></body>
 </html>
