change - sound fix

--- a/sound.html
+++ b/sound.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sound Design Portfolio – Emir Alhariri</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Sound Design Portfolio – Emir Alhariri</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
     body {
       background-color: #111;
       color: white;
@@ -48,26 +49,17 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <a href="index.html" class="back-link">← Back to Home</a>
-    <h1>Sound Design</h1>
-
-    <div class="video">
-      <iframe src="https://www.youtube.com/embed/Kc5XzxwwoDo" allowfullscreen></iframe>
-      <p class="description">Designed the soundscape for a T-Rex in a cinematic, atmospheric environment—layering footsteps, growls, and ambient textures to enhance tension and immersion.</p>
-    </div>
-
-    <div class="video">
-      <iframe src="https://www.youtube.com/embed/K4uYqEATpUI" allowfullscreen></iframe>
-      <p class="description">Created detailed mechanical sounds to bring a robot assembly sequence to life—featuring layered servo whirs, metallic clanks, and rhythmic machinery.</p>
-    </div>
-
-    <div class="video">
-      <iframe src="https://www.youtube.com/embed/D2lK5Ov3fRU" allowfullscreen></iframe>
-      <p class="description">Independent sound design practice on a BIFSC short film, portraying nature consuming the planet and starting anew. Focused on capturing the cycle of collapse and rebirth through organic textures and atmospheric layers.</p>
-    </div>
-
-    
-  </div>
+<div class="container">
+<a class="back-link" href="index.html">← Back to Home</a>
+<h1>Sound Design</h1>
+<div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/Kc5XzxwwoDo"></iframe>
+<p class="description">Designed the soundscape for a T-Rex in a cinematic, atmospheric environment—layering footsteps, growls, and ambient textures to enhance tension and immersion.</p>
+</div>
+<div class="video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/K4uYqEATpUI"></iframe>
+<p class="description">Created detailed mechanical sounds to bring a robot assembly sequence to life—featuring layered servo whirs, metallic clanks, and rhythmic machinery.</p>
+</div>
+</div>
 </body>
 </html>
