--- a/index.html
+++ b/index.html
@@ -104,6 +104,38 @@ nav a, .resume a, .contact a {
 section {
   margin-bottom: 3em;
 }
+
+/* Smooth transitions for interactive elements */
+a, .social-icons img, nav a {
+  transition: all 0.3s ease;
+}
+
+/* Hover effect for nav and button tiles */
+nav a:hover, .resume a:hover, .contact a[href^="mailto"]:hover {
+  background-color: #333;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  transform: translateY(-2px);
+}
+
+/* Hover effect for social icons */
+.social-icons img:hover {
+  filter: brightness(1.5);
+  transform: scale(1.1);
+}
+
+/* Button and tile polish */
+nav a, .resume a, .contact a[href^="mailto"] {
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+}
+
+/* General spacing improvements */
+body {
+  line-height: 1.6;
+}
+section {
+  margin-bottom: 3em;
+}
 </style>
 <title>Emir Frantzen Alhariri | Filmmaker &amp; Storyteller</title><meta content="Explore the creative portfolio of Emir Frantzen Alhariri, a filmmaker and storyteller specializing in narrative, corporate, and sound design productions." name="description"/><meta content="Emir Alhariri, filmmaker, video editor, cinematographer, Towson University, Howard Community College, portfolio, storytelling" name="keywords"/><meta content="Emir Frantzen Alhariri | Filmmaker &amp; Storyteller" property="og:title"/><meta content="Portfolio of filmmaker Emir Frantzen Alhariri. View narrative films, commercial work, sound design, and photography." property="og:description"/><meta content="https://emiralhariri.github.io/your-thumbnail.jpg" property="og:image"/><meta content="https://emiralhariri.github.io" property="og:url"/></head>
 <body>
