--- a/photos.html
+++ b/photos.html
@@ -38,6 +38,27 @@
     padding: 0 10px;
   }
 }
+
+/* Larger font adjustments for desktop and mobile */
+.intro h1 {
+  font-size: 42px;
+}
+.intro p {
+  font-size: 24px;
+  line-height: 1.75;
+  max-width: 800px;
+  margin: 0 auto 1.5em;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .intro h1 {
+    font-size: 34px;
+  }
+  .intro p {
+    font-size: 20px;
+    padding: 0 10px;
+  }
+}
 </style>
 <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet"/></head>
 <body>
