--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -16,12 +15,51 @@
     .about, .resume, .contact { text-align: center; padding: 2em; }
     .contact-images { display: flex; justify-content: center; gap: 1em; margin-top: 2em; }
     .contact-images img { width: 45%; height: auto; }
-  
+
+    /* Featured videos section */
+    .videos {
+      text-align: center;
+      padding: 2em 1em 3em;
+    }
+    .videos h1 {
+      font-size: 60px;
+      font-weight: 800;
+      margin: 2em 0 0.8em;
+    }
+    .videos h2 {
+      font-size: 28px;
+      margin-bottom: 0.4em;
+    }
+    .videos p {
+      font-size: 16px;
+      margin-bottom: 1em;
+      color: #ddd;
+    }
+    .video-wrapper {
+      max-width: 960px;
+      margin: 0 auto 3em;
+      border-radius: 14px;
+      overflow: hidden;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
+    }
+    .video-wrapper iframe {
+      width: 100%;
+      height: 400px;
+      border: 0;
+      display: block;
+    }
+
 @media (max-width: 768px) {
   .hero-images { flex-direction: column; }
   .hero-images img { width: 100%; }
   .contact-images img { width: 100%; margin-bottom: 1em; }
   .gallery img { width: 90% !important; }
+  .video-wrapper {
+    margin-bottom: 2.2em;
+  }
+  .video-wrapper iframe {
+    height: 220px;
+  }
 }
 
 nav {
@@ -143,12 +181,38 @@ section {
 <img alt="Intro Photo 1" src="EMIR-44.jpg"/>
 <img alt="Intro Photo 2" src="EMIR-45.jpg"/>
 </div><h1 style="text-align:center;font-size:80px;font-weight:800;margin:1.2em 0;">Emir Frantzen Alhariri</h1>
-<section class="about"><p style="text-align:center;font-size:18px;line-height:1.8;max-width:800px;margin:0 auto 1.2em;margin-top:1em;">I'm a filmmaker and storyteller currently completing my degree at Towson University for a BA in Electronic Media and Film. I was born in Norway and raised in Saudi Arabia, England, and Bahrain before settling in Maryland, that global journey shaped my passion for connecting with people through visual storytelling.</p><p style="text-align:center;font-size:18px;line-height:1.8;max-width:800px;margin:0 auto 1.2em;margin-top:1em;">My experience spans commercial sets, journalism, and freelance productions, with a strong foundation in all stages of production—from pre to post. During a gap year at a Norwegian folkehøgskole, I deepened my love for filmmaking through travel, hands-on learning, and creative collaboration.</p><p style="text-align:center;font-size:18px;line-height:1.8;max-width:800px;margin:0 auto 1.2em;margin-top:1em;">Outside of film, I find joy in mindfulness, fitness, and crafting, always striving to balance ambition with presence.</p></section><h1 style="text-align:center;font-size:60px;font-weight:800;margin:2em 0 1em;">Portfolio</h1><nav style="text-align:center;margin-bottom:20px;">
+<section class="about"><p style="text-align:center;font-size:18px;line-height:1.8;max-width:800px;margin:0 auto 1.2em;margin-top:1em;">I'm a filmmaker and storyteller currently completing my degree at Towson University for a BA in Electronic Media and Film. I was born in Norway and raised in Saudi Arabia, England, and Bahrain before settling in Maryland, that global journey shaped my passion for connecting with people through visual storytelling.</p><p style="text-align:center;font-size:18px;line-height:1.8;max-width:800px;margin:0 auto 1.2em;margin-top:1em;">My experience spans commercial sets, journalism, and freelance productions, with a strong foundation in all stages of production from pre to post. During a gap year at a Norwegian folkehøgskole, I deepened my love for filmmaking through travel, hands-on learning, and creative collaboration.</p><p style="text-align:center;font-size:18px;line-height:1.8;max-width:800px;margin:0 auto 1.2em;margin-top:1em;">Outside of film, I find joy in mindfulness, fitness, and crafting, always striving to balance ambition with presence.</p></section><h1 style="text-align:center;font-size:60px;font-weight:800;margin:2em 0 1em;">Portfolio</h1><nav style="text-align:center;margin-bottom:20px;">
 <a href="narrative.html" style="background-color:#222;color:white;padding:14px 30px;margin:8px;border-radius:6px;display:inline-block;font-size:24px;text-decoration:none;">Narrative</a>
 <a href="corporate.html" style="background-color:#222;color:white;padding:14px 30px;margin:8px;border-radius:6px;display:inline-block;font-size:24px;text-decoration:none;">Corporate</a>
 <a href="sound.html" style="background-color:#222;color:white;padding:14px 30px;margin:8px;border-radius:6px;display:inline-block;font-size:24px;text-decoration:none;">Sound</a>
 <a href="photos.html" style="background-color:#222;color:white;padding:14px 30px;margin:8px;border-radius:6px;display:inline-block;font-size:24px;text-decoration:none;">Photos</a>
 </nav>
+
+<!-- Featured Videos Section -->
+<section class="videos">
+    <h1>Featured Videos</h1>
+
+    <!-- Night Windows Cinematography -->
+    <div class="video-wrapper">
+        <h2>"Night Windows" Cinematography</h2>
+        <p>Edward Hopper inspired short focusing on mood, light, and quiet tension.</p>
+        <iframe 
+          src="https://www.youtube.com/embed/Yc9BXNKkexc" 
+          allowfullscreen>
+        </iframe>
+    </div>
+
+    <!-- Mustard Short Film -->
+    <div class="video-wrapper">
+        <h2>"Mustard" Short Film</h2>
+        <p>In-class short film built from an AI generated script, exploring timing and blocking.</p>
+        <iframe 
+          src="https://www.youtube.com/embed/hMhCHU_ikK0" 
+          allowfullscreen>
+        </iframe>
+    </div>
+</section>
+
 <section class="resume"><div style="text-align:center;"><a href="resume.pdf" style="background-color:#222;color:white;padding:14px 30px;margin:8px auto;border-radius:6px;display:inline-block;font-size:24px;text-decoration:none;text-align:center;" target="_blank">Resume</a></div></section>
 <section class="contact" id="contact">
 <h2>Contact</h2>
