--- a/index.html
+++ b/index.html
@@ -211,6 +211,17 @@ section {
           allowfullscreen>
         </iframe>
     </div>
+
+    <!-- Active Listening PSA -->
+    <div class="video-wrapper">
+        <h2>"Active Listening PSA"</h2>
+        <p>Short public service announcement demonstrating key communication principles.</p>
+        <iframe 
+          src="https://www.youtube.com/embed/pP0qQ_P_8Fc" 
+          allowfullscreen>
+        </iframe>
+    </div>
+
 </section>
 
 <section class="resume"><div style="text-align:center;"><a href="resume.pdf" style="background-color:#222;color:white;padding:14px 30px;margin:8px auto;border-radius:6px;display:inline-block;font-size:24px;text-decoration:none;text-align:center;" target="_blank">Resume</a></div></section>
